--- a/notebooks/230302-logistic-regression-math-equation-and-code.ipynb
+++ b/notebooks/230302-logistic-regression-math-equation-and-code.ipynb
@@ -27,6 +27,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -76,7 +86,8 @@
    "outputs": [],
    "source": [
     "# export anaconda environment\n",
-    "!conda env export > environment.yml\n"
+    "!conda env export > environment.yml\n",
+    "github"
    ]
   },
   {
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -229,39 +240,69 @@
      "output_type": "stream",
      "text": [
       "Collecting package metadata (current_repodata.json): done\n",
-      "Solving environment: failed with initial frozen solve. Retrying with flexible solve.\n",
-      "Solving environment: failed with repodata from current_repodata.json, will retry with next repodata source.\n",
-      "Collecting package metadata (repodata.json): done\n",
-      "Solving environment: failed with initial frozen solve. Retrying with flexible solve.\n",
-      "Solving environment: - \n",
-      "Found conflicts! Looking for incompatible packages.\n",
-      "This can take several minutes.  Press CTRL-C to abort.\n",
-      "                                                                                -failed\n",
+      "Solving environment: done\n",
       "\n",
-      "UnsatisfiableError: The following specifications were found\n",
-      "to be incompatible with the existing python installation in your environment:\n",
+      "## Package Plan ##\n",
       "\n",
-      "Specifications:\n",
+      "  environment location: /opt/conda\n",
       "\n",
-      "  - numpy -> python[version='>=2.7,<2.8.0a0|>=3.10,<3.11.0a0|>=3.9,<3.10.0a0|>=3.8,<3.9.0a0|>=3.7,<3.8.0a0|>=3.6,<3.7.0a0|>=3.5,<3.6.0a0']\n",
+      "  added / updated specs:\n",
+      "    - numpy\n",
       "\n",
-      "Your python: python=3.11\n",
       "\n",
-      "If python is on the left-most side of the chain, that's the version you've asked for.\n",
-      "When python appears to the right, that indicates that the thing on the left is somehow\n",
-      "not available for the python version you are constrained to. Note that conda will not\n",
-      "change your python version to a different minor version unless you explicitly specify\n",
-      "that.\n",
+      "The following packages will be downloaded:\n",
       "\n",
-      "The following specifications were found to be incompatible with your system:\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    _openmp_mutex-5.1          |            1_gnu          21 KB\n",
+      "    blas-1.0                   |              mkl           6 KB\n",
+      "    boltons-23.0.0             |  py310h06a4308_0         430 KB\n",
+      "    certifi-2023.5.7           |  py310h06a4308_0         152 KB\n",
+      "    conda-23.3.1               |  py310h06a4308_0         970 KB\n",
+      "    intel-openmp-2021.4.0      |    h06a4308_3561         4.2 MB\n",
+      "    jsonpatch-1.32             |     pyhd3eb1b0_0          15 KB\n",
+      "    jsonpointer-2.1            |     pyhd3eb1b0_0           9 KB\n",
+      "    libgcc-ng-11.2.0           |       h1234567_1         5.3 MB\n",
+      "    libgomp-11.2.0             |       h1234567_1         474 KB\n",
+      "    libstdcxx-ng-11.2.0        |       h1234567_1         4.7 MB\n",
+      "    mkl-2021.4.0               |     h06a4308_640       142.6 MB\n",
+      "    mkl-service-2.4.0          |  py310h7f8727e_0         177 KB\n",
+      "    mkl_fft-1.3.1              |  py310hd6ae3a3_0         567 KB\n",
+      "    mkl_random-1.2.2           |  py310h00e6091_0        1009 KB\n",
+      "    numpy-1.24.3               |  py310hd5efca6_0          11 KB\n",
+      "    numpy-base-1.24.3          |  py310h8e6c178_0         6.9 MB\n",
+      "    packaging-23.0             |  py310h06a4308_0          68 KB\n",
+      "    six-1.16.0                 |     pyhd3eb1b0_1          18 KB\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:       167.6 MB\n",
       "\n",
-      "  - feature:/linux-64::__glibc==2.31=0\n",
-      "  - feature:|@/linux-64::__glibc==2.31=0\n",
-      "  - numpy -> libgcc-ng[version='>=11.2.0'] -> __glibc[version='>=2.17']\n",
+      "The following NEW packages will be INSTALLED:\n",
       "\n",
-      "Your installed version is: 2.31\n",
+      "  _openmp_mutex      pkgs/main/linux-64::_openmp_mutex-5.1-1_gnu \n",
+      "  blas               pkgs/main/linux-64::blas-1.0-mkl \n",
+      "  boltons            pkgs/main/linux-64::boltons-23.0.0-py310h06a4308_0 \n",
+      "  intel-openmp       pkgs/main/linux-64::intel-openmp-2021.4.0-h06a4308_3561 \n",
+      "  jsonpatch          pkgs/main/noarch::jsonpatch-1.32-pyhd3eb1b0_0 \n",
+      "  jsonpointer        pkgs/main/noarch::jsonpointer-2.1-pyhd3eb1b0_0 \n",
+      "  libgomp            pkgs/main/linux-64::libgomp-11.2.0-h1234567_1 \n",
+      "  mkl                pkgs/main/linux-64::mkl-2021.4.0-h06a4308_640 \n",
+      "  mkl-service        pkgs/main/linux-64::mkl-service-2.4.0-py310h7f8727e_0 \n",
+      "  mkl_fft            pkgs/main/linux-64::mkl_fft-1.3.1-py310hd6ae3a3_0 \n",
+      "  mkl_random         pkgs/main/linux-64::mkl_random-1.2.2-py310h00e6091_0 \n",
+      "  numpy              pkgs/main/linux-64::numpy-1.24.3-py310hd5efca6_0 \n",
+      "  numpy-base         pkgs/main/linux-64::numpy-base-1.24.3-py310h8e6c178_0 \n",
+      "  packaging          pkgs/main/linux-64::packaging-23.0-py310h06a4308_0 \n",
+      "  six                pkgs/main/noarch::six-1.16.0-pyhd3eb1b0_1 \n",
       "\n",
-      "\n"
+      "The following packages will be UPDATED:\n",
+      "\n",
+      "  certifi                         2022.12.7-py310h06a4308_0 --> 2023.5.7-py310h06a4308_0 \n",
+      "  conda                              23.1.0-py310h06a4308_0 --> 23.3.1-py310h06a4308_0 \n",
+      "  libgcc-ng                                9.1.0-hdf63c60_0 --> 11.2.0-h1234567_1 \n",
+      "  libstdcxx-ng                             9.1.0-hdf63c60_0 --> 11.2.0-h1234567_1 \n",
+      "\n",
+      "\n",
+      "Proceed ([y]/n)? "
      ]
     }
    ],
@@ -499,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
